# zCore

./: run_gdb.sh
kernel-hal/: Cargo.toml
linux-object/: Cargo.toml
linux-object/src/: lib.rs
linux-object/src/dbginfo/: address.rs  mod.rs  parse.rs  stacktrace.rs
linux-object/src/fs/: file.rs
linux-syscall/src/: lib.rs
linux-syscall/src/ebpf/: bpf.rs  mod.rs
linux-syscall/src/file/: fd.rs
linux-syscall/test/: testbpf.c
linux-syscall/test/ebpf/: build.sh
linux-syscall/test/ebpf/kern/: Makefile  bpf.h  context.c  invalid.c  invalid_print.c  map.c  time2.c
linux-syscall/test/ebpf/libbpf/: Makefile  bpf_load.c  bpf_load.h  kern.c  user.c
linux-syscall/test/ebpf/user/: CMakeLists.txt  bpf.c  bpf.h  invalidprinttest.c  invalidtest.c  kernmaptest.c  loadprogex.c  loadprogextest.c  maptest.c  naivetest  naivetest.c  testbpf.c
linux-syscall/test/ebpf_sub/: Makefile  README.md  bpf.h  map.c
tools/fill/: fill.py  kernel.sym  kernel.tmp  run.sh
xtask/src/: build.rs  main.rs
xtask/src/linux/: mod.rs  test.rs
zCore/: riscv64.json
zCore/src/: backtrace.rs  lang.rs  main.rs
zircon-object/: Cargo.toml
zircon-object/src/: lib.rs
zircon-object/src/ebpf/: consts.rs  helpers.rs  map.rs  mod.rs  osutil.rs  program.rs  retcode.rs  syscall.rs  tracepoints.rs
zircon-object/src/ebpf/jit/: compile.rs  consts.rs  mod.rs
zircon-object/src/ebpf/map/: array.rs  hash.rs  internal.rs  mod.rs
zircon-object/src/probe/: kprobes.rs  kretprobes.rs  mod.rs  osutils.rs  trace.rs
zircon-object/src/probe/arch/riscv/: breakpoint.rs  mod.rs  trapframe.rs
zircon-object/src/probe/tests/: kprobes_test.rs  kretprobes_test.rs  mod.rs  trace_test.rs
zircon-object/src/symbol/: mod.rs  symbol_table.asm  table.rs
(+3 files in other folders)
